--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 adrf==0.1.9
+aiofiles==24.1.0
+aiogram==3.22.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
 amqp==5.3.1
+annotated-types==0.7.0
 asgiref==3.9.1
 async-property==0.2.2
 attrs==25.3.0
 billiard==4.2.1
 celery==5.5.3
+certifi==2025.8.3
 click==8.2.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
@@ -14,15 +21,22 @@ django-cors-headers==4.7.0
 django-redis==6.0.0
 djangorestframework==3.16.1
 drf-spectacular==0.28.0
+frozenlist==1.7.0
 h11==0.16.0
+idna==3.10
 inflection==0.5.1
 jsonschema==4.25.0
 jsonschema-specifications==2025.4.1
 kombu==5.5.4
+magic-filter==1.0.12
+multidict==6.6.4
 packaging==25.0
 pillow==11.3.0
 prompt_toolkit==3.0.51
+propcache==0.3.2
 psycopg2-binary==2.9.10
+pydantic==2.11.7
+pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 PyYAML==6.0.2
@@ -31,6 +45,7 @@ referencing==0.36.2
 rpds-py==0.27.0
 six==1.17.0
 sqlparse==0.5.3
+typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
 uritemplate==4.2.0
@@ -38,3 +53,4 @@ uvicorn==0.35.0
 vine==5.1.0
 wcwidth==0.2.13
 whitenoise==6.9.0
+yarl==1.20.1
