--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ aiohttp==3.12.15
 aiosignal==1.4.0
 amqp==5.3.1
 annotated-types==0.7.0
+anyio==4.10.0
 asgiref==3.9.1
 async-property==0.2.2
 attrs==25.3.0
@@ -23,6 +24,8 @@ djangorestframework==3.16.1
 drf-spectacular==0.28.0
 frozenlist==1.7.0
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 inflection==0.5.1
 jsonschema==4.25.0
@@ -44,6 +47,7 @@ redis==6.4.0
 referencing==0.36.2
 rpds-py==0.27.0
 six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
 typing-inspection==0.4.1
 typing_extensions==4.14.1
