--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ asgiref==3.9.1
 async-property==0.2.2
 attrs==25.3.0
 billiard==4.2.1
+boto3==1.40.51
+botocore==1.40.51
 celery==5.5.3
 certifi==2025.8.3
 click==8.2.1
@@ -20,6 +22,7 @@ click-repl==0.3.0
 Django==5.2.5
 django-cors-headers==4.7.0
 django-redis==6.0.0
+django-storages==1.14.6
 djangorestframework==3.16.1
 drf-spectacular==0.28.0
 frozenlist==1.7.0
@@ -28,6 +31,7 @@ httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 inflection==0.5.1
+jmespath==1.0.1
 jsonschema==4.25.0
 jsonschema-specifications==2025.4.1
 kombu==5.5.4
@@ -46,6 +50,7 @@ PyYAML==6.0.2
 redis==6.4.0
 referencing==0.36.2
 rpds-py==0.27.0
+s3transfer==0.14.0
 six==1.17.0
 sniffio==1.3.1
 sqlparse==0.5.3
@@ -53,6 +58,7 @@ typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
 uritemplate==4.2.0
+urllib3==2.5.0
 uvicorn==0.35.0
 vine==5.1.0
 wcwidth==0.2.13
